--- a/blue-pipeline/config/filebeat/filebeat.yml
+++ b/blue-pipeline/config/filebeat/filebeat.yml
@@ -6,6 +6,9 @@ filebeat.modules:
       enabled: true
       var.paths: ["/var/log/suricata/eve.json"]
 
+setup.kibana.host: "http://kibana:5601"
+setup.dashboards.enabled: true
+
 output.elasticsearch:
   hosts: ["http://elasticsearch:9200"]
 
